--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
       <address class="header-contact">
         <ul class="header-contact-list list">
           <li class="header-contact-item">
-            <a class="heder-link link" href="mailto:info@devstudio.com"
+            <a class="header-contact header-contact:hover link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
           <li class="header-contact-item">
-            <a class="heder-link link" href="tel:+110001111111"
+            <a class="header-contact header-contact:hover link" href="tel:+110001111111"
               >+11 (000) 111-11-11</a
             >
           </li>
@@ -58,29 +58,29 @@
         <h2 hidden>Our advantages</h2>
         <ul class="abaut-list list">
           <li class="abaut-item">
-            <h3 class="abaut-subtitle">Strategy</h3>
-            <p class="abaut-text">
+            <h3 class="subtitle">Strategy</h3>
+            <p class="p-text-slate">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li class="abaut-item">
-            <h3 class="abaut-subtitle">Punctuality</h3>
-            <p class="abaut-text">
+            <h3 class="subtitle">Punctuality</h3>
+            <p class="p-text-slate">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li class="abaut-item">
-            <h3 class="abaut-subtitle">Diligence</h3>
-            <p class="abaut-text">
+            <h3 class="subtitle">Diligence</h3>
+            <p class="p-text-slate">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li class="abaut-item">
-            <h3 class="abaut-subtitle">Technologies</h3>
-            <p class="abaut-text">
+            <h3 class="subtitle">Technologies</h3>
+            <p class="p-text-slate">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -89,7 +89,7 @@
       </section>
       <!--portfolio-->
       <section class="portfolio section">
-        <h2 class="portfolio-title">What are we doing</h2>
+        <h2 class="section-title">What are we doing</h2>
         <ul class="portfolio-title-list list">
           <li class="portfolio-title-item">
             <img
@@ -119,7 +119,7 @@
       </section>
       <!--team-section-->
       <section class="team section">
-        <h2 class="team-title">Our Team</h2>
+        <h2 class="section-title">Our Team</h2>
         <ul class="team-title-list list">
           <li class="team-title-item">
             <img
@@ -129,8 +129,8 @@
               src="./images/mark(1).jpg"
               alt="mark"
             />
-            <h3 class="team-title-subtitle">Mark Guerrero</h3>
-            <p class="team-title-text">Product Designer</p>
+            <h3 class="subtitle">Mark Guerrero</h3>
+            <p class="p-text-slate">Product Designer</p>
           </li>
           <li class="team-title-item">
             <img
@@ -140,8 +140,8 @@
               src="./images/tom(1).jpg"
               alt="tom"
             />
-            <h3 class="team-title-subtitle">Tom Ford</h3>
-            <p class="team-title-text">Frontend Developer</p>
+            <h3 class="subtitle">Tom Ford</h3>
+            <p class="p-text-slate">Frontend Developer</p>
           </li>
           <li class="team-title-item">
             <img
@@ -151,8 +151,8 @@
               src="./images/camila(1).jpg"
               alt="camila"
             />
-            <h3 class="team-title-subtitle">Camila Garcia</h3>
-            <p class="team-title-text">Marketing</p>
+            <h3 class="subtitle">Camila Garcia</h3>
+            <p class="p-text-slate">Marketing</p>
           </li>
           <li class="team-title-item">
             <img
@@ -162,18 +162,18 @@
               src="./images/daniel(1).jpg"
               alt="daniel"
             />
-            <h3 class="team-title-subtitle">Daniel Wilson</h3>
-            <p class="team-title-text">UI Designer</p>
+            <h3 class="subtitle">Daniel Wilson</h3>
+            <p class="p-text-slate">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
     <!--footer-->
     <footer class="footer">
-      <a class="logo-link link" href="./index.html"
+      <a class="logo-link-cloud link" href="./index.html"
         ><span class="web-logo">Web</span>Studio</a
       >
-      <p class="footer-text">
+      <p class="p-text-cloud">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
