--- a/portfolio.html
+++ b/portfolio.html
@@ -35,12 +35,12 @@
       <address class="header-contact">
         <ul class="header-contact-list list">
           <li class="header-contact-item">
-            <a class="header-link link" href="mailto:info@devstudio.com"
+            <a class="header-contact header-contact:hover link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
           <li class="header-contact-item">
-            <a class="header-link link" href="tel:+110001111111"
+            <a class="header-contact header-contact:hover link" href="tel:+110001111111"
               >+11 (000) 111-11-11</a
             >
           </li>
@@ -87,8 +87,8 @@
                 width="360"
                 height="300"
               />
-              <h2 class="card-section-title">Banking App Interface Concept</h2>
-              <p class="card-section-text">App</p>
+              <h2 class="subtitle">Banking App Interface Concept</h2>
+              <p class="p-text-slate">App</p>
             </a>
           </li>
           <li class="card-section-item">
@@ -100,8 +100,8 @@
                 width="360"
                 height="300"
               />
-              <h2 class="card-section-title">Cashless Payment</h2>
-              <p class="card-section-text">Marketing</p>
+              <h2 class="subtitle">Cashless Payment</h2>
+              <p class="p-text-slate">Marketing</p>
             </a>
           </li>
           <li class="card-section-item">
@@ -113,8 +113,8 @@
                 width="360"
                 height="300"
               />
-              <h2 class="card-section-title">Meditation App</h2>
-              <p class="card-section-text">App</p>
+              <h2 class="subtitle">Meditation App</h2>
+              <p class="p-text-slate">App</p>
             </a>
           </li>
           <li class="card-section-item">
@@ -126,8 +126,8 @@
                 width="360"
                 height="300"
               />
-              <h2 class="card-section-title">Taxi Service</h2>
-              <p class="card-section-text">Marketing</p>
+              <h2 class="subtitle">Taxi Service</h2>
+              <p class="p-text-slate">Marketing</p>
             </a>
           </li>
           <li class="card-section-item">
@@ -139,8 +139,8 @@
                 width="360"
                 height="300"
               />
-              <h2 class="card-section-title">Screen Illustrations</h2>
-              <p class="card-section-text">Design</p>
+              <h2 class="subtitle">Screen Illustrations</h2>
+              <p class="p-text-slate">Design</p>
             </a>
           </li>
           <li class="card-section-item">
@@ -152,8 +152,8 @@
                 width="360"
                 height="300"
               />
-              <h2 class="card-section-title">Online Courses</h2>
-              <p class="card-section-text">Marketing</p>
+              <h2 class="subtitle">Online Courses</h2>
+              <p class="p-text-slate">Marketing</p>
             </a>
           </li>
           <li class="card-section-item">
@@ -165,8 +165,8 @@
                 width="360"
                 height="300"
               />
-              <h2 class="card-section-title">Instagram Stories Concept</h2>
-              <p class="card-section-text">Design</p>
+              <h2 class="subtitle">Instagram Stories Concept</h2>
+              <p class="p-text-slate">Design</p>
             </a>
           </li>
           <li class="card-section-item">
@@ -178,8 +178,8 @@
                 width="360"
                 height="300"
               />
-              <h2 class="card-section-title">Organic Food</h2>
-              <p class="card-section-text">Web Site</p>
+              <h2 class="subtitle">Organic Food</h2>
+              <p class="p-text-slate">Web Site</p>
             </a>
           </li>
           <li class="card-section-item">
@@ -191,8 +191,8 @@
                 width="360"
                 height="300"
               />
-              <h2 class="card-section-title">Fresh Coffee</h2>
-              <p class="card-section-text">Web Site</p>
+              <h2 class="subtitle">Fresh Coffee</h2>
+              <p class="p-text-slate">Web Site</p>
             </a>
           </li>
         </ul>
@@ -200,10 +200,10 @@
     </main>
     <!--footer-->
     <footer class="footer">
-      <a class="logo-link link" href="./index.html"
+      <a class="logo-link-cloud link" href="./index.html"
         ><span class="web-logo">Web</span>Studio</a
       >
-      <p class="footer-text">
+      <p class="p-text-cloud">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
