--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
             >
           </li>
           <li class="header-nav-item">
-            <a class="desc desc:hover link" href="./portfolio.html"
+            <a class="desc desc:hover desc:focus link" href="./portfolio.html"
               >Portfolio</a
             >
           </li>
           <li class="header-nav-item">
-            <a class="desc desc:hover link" href="">Contacts</a>
+            <a class="desc desc:hover desc:focus link" href="">Contacts</a>
           </li>
         </ul>
       </nav>
@@ -47,7 +47,7 @@
           </li>
           <li class="header-contact-item">
             <a
-              class="header-contact header-contact:hover link"
+              class="header-contact header-contact:hover header-contact:focus link"
               href="tel:+110001111111"
               >+11 (000) 111-11-11</a
             >
@@ -57,9 +57,11 @@
     </header>
     <main>
       <!--hero-->
-      <section class="hero section">
+      <section class="hero-section">
         <h1 class="title">Effective Solutions for Your Business</h1>
-        <button class="btn btn:hover" type="button">Order Service</button>
+        <button class="btn btn:hover btn:focus" type="button">
+          Order Service
+        </button>
       </section>
       <!--abaut-section-->
       <section class="abaut section">
