--- a/portfolio.html
+++ b/portfolio.html
@@ -27,12 +27,12 @@
             >
           </li>
           <li class="header-nav-item">
-            <a class="desc desc:hover link" href="./portfolio.html"
+            <a class="desc desc:hover desc:focus link" href="./portfolio.html"
               >Portfolio</a
             >
           </li>
           <li class="header-nav-item">
-            <a class="desc desc:hover link" href="">Contacts</a>
+            <a class="desc desc:hover desc:focus link" href="">Contacts</a>
           </li>
         </ul>
       </nav>
@@ -47,7 +47,7 @@
           </li>
           <li class="header-contact-item">
             <a
-              class="header-contact header-contact:hover link"
+              class="header-contact header-contact:hover header-contact:focus link"
               href="tel:+110001111111"
               >+11 (000) 111-11-11</a
             >
@@ -61,30 +61,47 @@
         <h1 hidden>Portfolio</h1>
         <ul class="filter-section-list list">
           <li class="filter-section-item">
-            <button class="btn btn:hover" type="button">All</button>
+            <button
+              class="btn-cloud btn-cloud:hover btn-cloud:focus"
+              type="button"
+            >
+              All
+            </button>
           </li>
           <li class="filter-section-item">
-            <button class="btn-cloud btn-cloud:hover" type="button">
+            <button
+              class="btn-cloud btn-cloud:hover btn-cloud:focus"
+              type="button"
+            >
               Web Site
             </button>
           </li>
           <li class="filter-section-item">
-            <button class="btn-cloud btn-cloud:hover" type="button">App</button>
+            <button
+              class="btn-cloud btn-cloud:hover btn-cloud:focus"
+              type="button"
+            >
+              App
+            </button>
           </li>
           <li class="filter-section-item">
-            <button class="btn-cloud btn-cloud:hover" type="button">
+            <button
+              class="btn-cloud btn-cloud:hover btn-cloud:focus"
+              type="button"
+            >
               Design
             </button>
           </li>
           <li class="filter-section-item">
-            <button class="btn-cloud btn-cloud:hover" type="button">
+            <button
+              class="btn-cloud btn-cloud:hover btn-cloud:focus"
+              type="button"
+            >
               Marketing
             </button>
           </li>
         </ul>
-      </section>
-      <!--card-section-->
-      <section class="card-section section">
+        <!--card-section-->
         <ul class="card-section-list list">
           <li class="card-section-item">
             <a class="card-section-link link" href="./images/bankingapp.jpg">
