--- a/index.html
+++ b/index.html
@@ -128,9 +128,9 @@
         </ul>
       </section>
       <!--team-section-->
-      <section class="team section">
+      <section class="team-section">
         <h2 class="section-title">Our Team</h2>
-        <ul class="team-title-list list">
+        <ul class="team-section list">
           <li class="team-title-item">
             <img
               class="team-title-img"
