--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         >
         <ul class="header-nav-list list">
           <li class="header-nav-item">
-            <a class="desc desc:hover desc:focus link" href="./index.html"
+            <a class="desc link" href="./index.html"
               >Studio</a
             >
           </li>
