--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
             >
           </li>
           <li class="header-nav-item">
-            <a class="desc desc:hover desc:focus link" href="./portfolio.html"
+            <a class="desc link" href="./portfolio.html"
               >Portfolio</a
             >
           </li>
           <li class="header-nav-item">
-            <a class="desc desc:hover desc:focus link" href="">Contacts</a>
+            <a class="desc link" href="">Contacts</a>
           </li>
         </ul>
       </nav>
