--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       </section>
       <!--abaut-section-->
       <section>
-        <h2 hidden>Our advantages</h2>
+        <h2 hidden class="subtitle">Our advantages</h2>
         <ul class="abaut-list list">
           <li class="abaut-item">
             <h3 class="subtitle">Strategy</h3>
